tree-sitter-urd/test/corpus/statements.txt
================================================================================
Declaration let simple
================================================================================

let x = 42

--------------------------------------------------------------------------------

(source_file
  (declaration
    name: (identifier_path (identifier))
    value: (integer)))

================================================================================
Declaration const simple
================================================================================

const MAX = 100

--------------------------------------------------------------------------------

(source_file
  (declaration
    name: (identifier_path (identifier))
    value: (integer)))

================================================================================
Declaration global simple
================================================================================

global score = 0

--------------------------------------------------------------------------------

(source_file
  (declaration
    name: (identifier_path (identifier))
    value: (integer)))

================================================================================
Declaration let with type annotation int
================================================================================

let hp: int = 100

--------------------------------------------------------------------------------

(source_file
  (declaration
    name: (identifier_path (identifier))
    type: (type_annotation
      (type_name))
    value: (integer)))

================================================================================
Declaration let with type annotation float
================================================================================

let ratio: float = 0.5

--------------------------------------------------------------------------------

(source_file
  (declaration
    name: (identifier_path (identifier))
    type: (type_annotation
      (type_name))
    value: (float)))

================================================================================
Declaration let with type annotation bool
================================================================================

let flag: bool = true

--------------------------------------------------------------------------------

(source_file
  (declaration
    name: (identifier_path (identifier))
    type: (type_annotation
      (type_name))
    value: (boolean)))

================================================================================
Declaration let with type annotation str
================================================================================

let msg: str = "hello"

--------------------------------------------------------------------------------

(source_file
  (declaration
    name: (identifier_path (identifier))
    type: (type_annotation
      (type_name))
    value: (string
      (string_literal_fragment))))

================================================================================
Declaration let with type annotation null
================================================================================

let nothing: null = null

--------------------------------------------------------------------------------

(source_file
  (declaration
    name: (identifier_path (identifier))
    type: (type_annotation
      (type_name))
    value: (null)))

================================================================================
Declaration let with type annotation list
================================================================================

let items: list = []

--------------------------------------------------------------------------------

(source_file
  (declaration
    name: (identifier_path (identifier))
    type: (type_annotation
      (type_name))
    value: (list_expr)))

================================================================================
Declaration let with type annotation map
================================================================================

let data: map = :{}

--------------------------------------------------------------------------------

(source_file
  (declaration
    name: (identifier_path (identifier))
    type: (type_annotation
      (type_name))
    value: (map_expr)))

================================================================================
Declaration let with type annotation dice
================================================================================

let roll: dice = 2d6

--------------------------------------------------------------------------------

(source_file
  (declaration
    name: (identifier_path (identifier))
    type: (type_annotation
      (type_name))
    value: (dice)))

================================================================================
Declaration let with type annotation label
================================================================================

let target: label = intro

--------------------------------------------------------------------------------

(source_file
  (declaration
    name: (identifier_path (identifier))
    type: (type_annotation
      (type_name))
    value: (identifier_path (identifier))))

================================================================================
Declaration let with named user type
================================================================================

let dir: Direction = North

--------------------------------------------------------------------------------

(source_file
  (declaration
    name: (identifier_path (identifier))
    type: (type_annotation
      (type_name
        (identifier_path (identifier))))
    value: (identifier_path (identifier))))

================================================================================
Declaration let with qualified named user type
================================================================================

let pt: my_mod.Point = make_point(1, 2)

--------------------------------------------------------------------------------

(source_file
  (declaration
    name: (identifier_path (identifier))
    type: (type_annotation
      (type_name
        (identifier_path
          (identifier)
          (identifier))))
    value: (call_expr
      function: (identifier_path (identifier))
      argument: (integer)
      argument: (integer))))

================================================================================
Declaration const with string value
================================================================================

const greeting: str = "Good morning"

--------------------------------------------------------------------------------

(source_file
  (declaration
    name: (identifier_path (identifier))
    type: (type_annotation
      (type_name))
    value: (string
      (string_literal_fragment))))

================================================================================
Declaration global with struct map value
================================================================================

const aria: Character = :{ name: "ARIA", name_color: "cyan" }

--------------------------------------------------------------------------------

(source_file
  (declaration
    name: (identifier_path (identifier))
    type: (type_annotation
      (type_name
        (identifier_path (identifier))))
    value: (map_expr
      key: (identifier_path (identifier))
      value: (string (string_literal_fragment))
      key: (identifier_path (identifier))
      value: (string (string_literal_fragment)))))

================================================================================
Declaration with expression value
================================================================================

let damage = base * multiplier + bonus

--------------------------------------------------------------------------------

(source_file
  (declaration
    name: (identifier_path (identifier))
    value: (binary_expr
      left: (binary_expr
        left: (identifier_path (identifier))
        operator: (binary_operator)
        right: (identifier_path (identifier)))
      operator: (binary_operator)
      right: (identifier_path (identifier)))))

================================================================================
Assignment simple
================================================================================

gold = 50

--------------------------------------------------------------------------------

(source_file
  (assignment
    target: (identifier_path (identifier))
    value: (integer)))

================================================================================
Assignment with expression
================================================================================

health = health - 30

--------------------------------------------------------------------------------

(source_file
  (assignment
    target: (identifier_path (identifier))
    value: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (integer))))

================================================================================
Assignment to path identifier
================================================================================

player.score = 100

--------------------------------------------------------------------------------

(source_file
  (assignment
    target: (identifier_path
      (identifier)
      (identifier))
    value: (integer)))

================================================================================
Assignment boolean
================================================================================

has_key = true

--------------------------------------------------------------------------------

(source_file
  (assignment
    target: (identifier_path (identifier))
    value: (boolean)))

================================================================================
Assignment enum variant
================================================================================

heading = North

--------------------------------------------------------------------------------

(source_file
  (assignment
    target: (identifier_path (identifier))
    value: (identifier_path (identifier))))

================================================================================
Subscript assignment
================================================================================

inventory[0] = "sword"

--------------------------------------------------------------------------------

(source_file
  (subscript_assignment
    object: (identifier_path (identifier))
    key: (integer)
    value: (string
      (string_literal_fragment))))

================================================================================
Subscript assignment with expression key
================================================================================

grid[row] = new_row

--------------------------------------------------------------------------------

(source_file
  (subscript_assignment
    object: (identifier_path (identifier))
    key: (identifier_path (identifier))
    value: (identifier_path (identifier))))

================================================================================
Subscript assignment with expression value
================================================================================

stats[level] = base + bonus

--------------------------------------------------------------------------------

(source_file
  (subscript_assignment
    object: (identifier_path (identifier))
    key: (identifier_path (identifier))
    value: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (identifier_path (identifier)))))

================================================================================
If statement simple
================================================================================

if x > 0 {
  jump win
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (integer))
    consequence: (block
      (jump_statement
        label: (identifier_path (identifier))))))

================================================================================
If statement with else
================================================================================

if health > 0 {
  jump alive
} else {
  jump dead
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (integer))
    consequence: (block
      (jump_statement
        label: (identifier_path (identifier))))
    else_clause: (else_clause
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))))

================================================================================
If statement with elif
================================================================================

if gold >= 60 {
  jump rich_ending
} elif gold >= 10 {
  jump ok_ending
} else {
  jump poor_ending
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (integer))
    consequence: (block
      (jump_statement
        label: (identifier_path (identifier))))
    elif_clause: (elif_clause
      condition: (binary_expr
        left: (identifier_path (identifier))
        operator: (binary_operator)
        right: (integer))
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))
    else_clause: (else_clause
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))))

================================================================================
If statement multiple elif
================================================================================

if a {
  jump x
} elif b {
  jump y
} elif c {
  jump z
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (identifier_path (identifier))
    consequence: (block
      (jump_statement
        label: (identifier_path (identifier))))
    elif_clause: (elif_clause
      condition: (identifier_path (identifier))
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))
    elif_clause: (elif_clause
      condition: (identifier_path (identifier))
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))))

================================================================================
If with declaration inside block
================================================================================

if has_key {
  let reward: int = 50
  gold = gold + reward
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (identifier_path (identifier))
    consequence: (block
      (declaration
        name: (identifier_path (identifier))
        type: (type_annotation (type_name))
        value: (integer))
      (assignment
        target: (identifier_path (identifier))
        value: (binary_expr
          left: (identifier_path (identifier))
          operator: (binary_operator)
          right: (identifier_path (identifier)))))))

================================================================================
Match statement single arm
================================================================================

match heading {
  North {
    jump north_route
  }
}

--------------------------------------------------------------------------------

(source_file
  (match_statement
    scrutinee: (identifier_path (identifier))
    arm: (match_arm
      pattern: (identifier_path (identifier))
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))))

================================================================================
Match statement multiple arms
================================================================================

match heading {
  North {
    jump north
  }
  South {
    jump south
  }
  East {
    jump east
  }
}

--------------------------------------------------------------------------------

(source_file
  (match_statement
    scrutinee: (identifier_path (identifier))
    arm: (match_arm
      pattern: (identifier_path (identifier))
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))
    arm: (match_arm
      pattern: (identifier_path (identifier))
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))
    arm: (match_arm
      pattern: (identifier_path (identifier))
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))))

================================================================================
Match statement wildcard arm
================================================================================

match result {
  _ {
    jump fallback
  }
}

--------------------------------------------------------------------------------

(source_file
  (match_statement
    scrutinee: (identifier_path (identifier))
    arm: (match_arm
      pattern: (wildcard)
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))))

================================================================================
Match statement with literal patterns
================================================================================

match score {
  0 {
    jump zero_score
  }
  100 {
    jump perfect
  }
  _ {
    jump normal
  }
}

--------------------------------------------------------------------------------

(source_file
  (match_statement
    scrutinee: (identifier_path (identifier))
    arm: (match_arm
      pattern: (integer)
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))
    arm: (match_arm
      pattern: (integer)
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))
    arm: (match_arm
      pattern: (wildcard)
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))))

================================================================================
Match statement with boolean pattern
================================================================================

match flag {
  true {
    jump enabled
  }
  false {
    jump disabled
  }
}

--------------------------------------------------------------------------------

(source_file
  (match_statement
    scrutinee: (identifier_path (identifier))
    arm: (match_arm
      pattern: (boolean)
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))
    arm: (match_arm
      pattern: (boolean)
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))))

================================================================================
Match statement with null pattern
================================================================================

match val {
  null {
    jump handle_null
  }
}

--------------------------------------------------------------------------------

(source_file
  (match_statement
    scrutinee: (identifier_path (identifier))
    arm: (match_arm
      pattern: (null)
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))))

================================================================================
Match statement with string pattern
================================================================================

match mode {
  "easy" {
    jump easy_mode
  }
  "hard" {
    jump hard_mode
  }
}

--------------------------------------------------------------------------------

(source_file
  (match_statement
    scrutinee: (identifier_path (identifier))
    arm: (match_arm
      pattern: (string (string_literal_fragment))
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))
    arm: (match_arm
      pattern: (string (string_literal_fragment))
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))))

================================================================================
Return statement no value
================================================================================

return

--------------------------------------------------------------------------------

(source_file
  (return_statement))

================================================================================
Return statement with integer value
================================================================================

return 42

--------------------------------------------------------------------------------

(source_file
  (return_statement
    value: (integer)))

================================================================================
Return statement with expression
================================================================================

return gold + bonus

--------------------------------------------------------------------------------

(source_file
  (return_statement
    value: (binary_expr
      left: (identifier_path (identifier))
      operator: (binary_operator)
      right: (identifier_path (identifier)))))

================================================================================
Return statement with boolean
================================================================================

return true

--------------------------------------------------------------------------------

(source_file
  (return_statement
    value: (boolean)))

================================================================================
Return statement with null
================================================================================

return null

--------------------------------------------------------------------------------

(source_file
  (return_statement
    value: (null)))

================================================================================
Jump statement simple
================================================================================

jump intro

--------------------------------------------------------------------------------

(source_file
  (jump_statement
    label: (identifier_path (identifier))))

================================================================================
Jump statement underscore label
================================================================================

jump _end

--------------------------------------------------------------------------------

(source_file
  (jump_statement
    label: (identifier_path (identifier))))

================================================================================
Jump statement and return
================================================================================

jump calc_damage and return

--------------------------------------------------------------------------------

(source_file
  (jump_statement
    label: (identifier_path
      (identifier))))

================================================================================
Jump statement cross-module dot path
================================================================================

jump quest.intro

--------------------------------------------------------------------------------

(source_file
  (jump_statement
    label: (identifier_path
      (identifier)
      (identifier))))

================================================================================
Let call statement
================================================================================

let result = jump compute and return

--------------------------------------------------------------------------------

(source_file
  (let_call_statement
    name: (identifier)
    target: (identifier_path
      (identifier))))

================================================================================
Let call statement cross-module target
================================================================================

let val = jump math.clamp and return

--------------------------------------------------------------------------------

(source_file
  (let_call_statement
    name: (identifier)
    target: (identifier_path
      (identifier)
      (identifier))))

================================================================================
Label statement empty body
================================================================================

label _end {
}

--------------------------------------------------------------------------------

(source_file
  (label_statement
    name: (identifier)
    body: (block)))

================================================================================
Label statement with jump
================================================================================

label intro {
  jump main_menu
}

--------------------------------------------------------------------------------

(source_file
  (label_statement
    name: (identifier)
    body: (block
      (jump_statement
        label: (identifier_path (identifier))))))

================================================================================
Label statement with multiple statements
================================================================================

label start {
  global turn = 0
  global alive = true
  jump opening
}

--------------------------------------------------------------------------------

(source_file
  (label_statement
    name: (identifier)
    body: (block
      (declaration
        name: (identifier_path (identifier))
        value: (integer))
      (declaration
        name: (identifier_path (identifier))
        value: (boolean))
      (jump_statement
        label: (identifier_path (identifier))))))

================================================================================
Dialogue statement single speaker string content
================================================================================

<narrator>: "Hello, traveler."

--------------------------------------------------------------------------------

(source_file
  (dialogue_statement
    speaker: (identifier_path (identifier))
    content: (string
      (string_literal_fragment))))

================================================================================
Dialogue statement single speaker interpolated string
================================================================================

<aria>: "Hull integrity: {hull_integrity} percent."

--------------------------------------------------------------------------------

(source_file
  (dialogue_statement
    speaker: (identifier_path (identifier))
    content: (string
      (string_literal_fragment)
      (interpolation
        (interpolation_path))
      (string_literal_fragment))))

================================================================================
Dialogue statement with block content single line
================================================================================

<narrator>: {
  "You stand at the crossroads."
}

--------------------------------------------------------------------------------

(source_file
  (dialogue_statement
    speaker: (identifier_path (identifier))
    content: (dialogue_block
      line: (string
        (string_literal_fragment)))))

================================================================================
Dialogue statement with block content multiple lines
================================================================================

<aria>: {
  "Good morning, Commander."
  "All primary systems are nominal."
  "Shall we chart a course?"
}

--------------------------------------------------------------------------------

(source_file
  (dialogue_statement
    speaker: (identifier_path (identifier))
    content: (dialogue_block
      line: (string (string_literal_fragment))
      line: (string (string_literal_fragment))
      line: (string (string_literal_fragment)))))

================================================================================
Dialogue statement multiple speakers
================================================================================

<aria, commander>: "We have a situation."

--------------------------------------------------------------------------------

(source_file
  (dialogue_statement
    speaker: (identifier_path (identifier))
    speaker: (identifier_path (identifier))
    content: (string
      (string_literal_fragment))))

================================================================================
Dialogue statement speaker is a path
================================================================================

<ship.captain>: "Full speed ahead."

--------------------------------------------------------------------------------

(source_file
  (dialogue_statement
    speaker: (identifier_path
      (identifier)
      (identifier))
    content: (string
      (string_literal_fragment))))

================================================================================
Dialogue statement with escape sequence in string
================================================================================

<narrator>: "Line one.\nLine two."

--------------------------------------------------------------------------------

(source_file
  (dialogue_statement
    speaker: (identifier_path (identifier))
    content: (string
      (string_literal_fragment)
      (escape_sequence)
      (string_literal_fragment))))

================================================================================
Menu statement single option
================================================================================

menu {
  "Continue" {
    jump next
  }
}

--------------------------------------------------------------------------------

(source_file
  (menu_statement
    option: (menu_option
      label: (string (string_literal_fragment))
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))))

================================================================================
Menu statement multiple options
================================================================================

menu {
  "Go north" {
    jump north
  }
  "Go south" {
    jump south
  }
  "Turn back" {
    jump entrance
  }
}

--------------------------------------------------------------------------------

(source_file
  (menu_statement
    option: (menu_option
      label: (string (string_literal_fragment))
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))
    option: (menu_option
      label: (string (string_literal_fragment))
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))
    option: (menu_option
      label: (string (string_literal_fragment))
      body: (block
        (jump_statement
          label: (identifier_path (identifier)))))))

================================================================================
Menu option body with multiple statements
================================================================================

menu {
  "Take the torch" {
    has_torch = true
    gold = gold - 5
    jump cave
  }
}

--------------------------------------------------------------------------------
